--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,18 +3,16 @@ on:
   pull_request:
   push:
 jobs:
-  tests:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2.3.1
-    - uses: cachix/install-nix-action@v12
-      with:
-        nix_path: nixpkgs=channel:nixos-unstable
-    - run: nix build
+    - uses: actions/checkout@v4.1.6
+    - uses: cachix/install-nix-action@v15
+    - run: nix --experimental-features 'nix-command flakes' build -L
     - name: "Copy ti84-forth"
-      run: "mkdir ti84-forth && cp -r result/* ti84-forth && chmod +w -R ti84-forth"
+      run: cp result/forth.8xp .
     - name: "Upload artifact to github"
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4.3.3
       with:
-        name: ti84-forth
-        path: ti84-forth
+        name: forth.8xp
+        path: forth.8xp
